Style and HTML 10/8

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   background-color: tomato;
   color: white;
   padding: 10px;}
+  
 
 </style>
 </head>
@@ -34,13 +35,13 @@
 
 <h2>Here is a summary about my life</h2>
 
-<div >
+<div> 
   <h2 class="year">2004-2008</h2>
   <p>I was born in Boston Massachusetts and moved to Andover shortly after.</p>
   <p>I stayed there for four years before I moved to Ridgefield.</p>
 </div>
 
-<div >
+<div ></div>
   <h2 class="year">2008-2019</h2>
   <p>During these years I grew up in Ridgefield, CT and went to public school there.</p>
   <p>I went to a boarding school after 2019, but still came home during breaks.</p>
@@ -56,9 +57,4 @@
   <h2 class="year">2023-present</h2>
   <p>I was accepted into my dream school of Northwestern.</p>
   <p>I play club ice hockey, am in the PGN business fraternity, and write for various student publications.</p>
-</div>
-
-<h2></h2>
-<div class="Journalism Work">
-  <h2
 </div>
