--- a/index.html
+++ b/index.html
@@ -1,14 +1,7 @@
 <html></html>
 <head>
+<link rel="stylesheet" href="style.css"
 <title>my page</title>
-<style>
-  .year {
-  background-color: tomato;
-  color: white;
-  padding: 10px;}
-  
-
-</style>
 </head>
 
 <body>
@@ -19,7 +12,7 @@
 
 <p>My name is Tyler Brown and I live in Ridgefield Connecticut. I go to Northwestern University, and I am studying Journalism. Some of my favorite things are:</p>
 
-<ol>
+<ol id = "hobbies">
 	<li>Playing hockey</li>
 	<li>Writing</li>
 	<li>Traveling to new places</li>
@@ -41,20 +34,26 @@
   <p>I stayed there for four years before I moved to Ridgefield.</p>
 </div>
 
-<div ></div>
+<div >
   <h2 class="year">2008-2019</h2>
   <p>During these years I grew up in Ridgefield, CT and went to public school there.</p>
   <p>I went to a boarding school after 2019, but still came home during breaks.</p>
 </div>
 
 <div >
-  <h2 class="year">2019-2023</h2>
-  <p>I went to Pomfret school in Pomfret, CT where I played hockey and baseball.</p>
-  <p>I was a dorm prefect, head sports editor of the school paper, and a writing tutor.</p>
+  <h2 class ="year">2019-2023</h2>
+  <p class ="center">I went to Pomfret school in Pomfret, CT where I played hockey and baseball.</p>
+  <p class ="center">I was a dorm prefect, head sports editor of the school paper, and a writing tutor.</p>
+  
 </div>
 
 <div>
   <h2 class="year">2023-present</h2>
   <p>I was accepted into my dream school of Northwestern.</p>
   <p>I play club ice hockey, am in the PGN business fraternity, and write for various student publications.</p>
+  <p> <a href="https://tylerbrown10.substack.com/" class="Journalism">Here is some of my Journalism work </a> </p>
+</div>
+
+<div class ="fixed">
+  This is fixed
 </div>
