--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
 </head>
 
 <body>
+
+
+
+  
+
 <h1>About Me</h1>
 
 
-<img src="https://placecats.com/300/200" />
+<img src="Headshot.jpeg" alt="Tyler Brown Headshot" style="width:200px;height200px;"/>
 
 <p>My name is Tyler Brown and I live in Ridgefield Connecticut. I go to Northwestern University, and I am studying Journalism. Some of my favorite things are:</p>
 
@@ -40,14 +45,17 @@
   <p>I went to a boarding school after 2019, but still came home during breaks.</p>
 </div>
 
-<div >
+<div id="scroll" >
   <h2 class ="year">2019-2023</h2>
   <p class ="center">I went to Pomfret school in Pomfret, CT where I played hockey and baseball.</p>
   <p class ="center">I was a dorm prefect, head sports editor of the school paper, and a writing tutor.</p>
   
+  
 </div>
 
 <div>
+  <div id="moving_box">
+  </div>
   <h2 class="year">2023-present</h2>
   <p>I was accepted into my dream school of Northwestern.</p>
   <p>I play club ice hockey, am in the PGN business fraternity, and write for various student publications.</p>
@@ -57,3 +65,5 @@
 <div class ="fixed">
   This is fixed
 </div>
+
+</body>
